--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,14 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Env
+.env
+
+# Prisma
+Prisma
+prisma.schema
+
+# rest client
+rest client
+rest_client.http
